@@ -1,5 +1,7 @@
 2003-09-29
 	* yet faster parsing
+	* switch to stdio/perlio instead of raw io: more correct,
+	  simpler parsing code.
 
 2003-09-28
 	* prevent some warnings
